--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,12 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
-Flask-RESTful==0.3.8
+gunicorn==20.1.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+python-dotenv==0.17.0
 pytz==2021.1
 requests==2.25.1
 six==1.15.0
